--- a/views/index.html
+++ b/views/index.html
@@ -12,24 +12,7 @@
 </head>
 
 <body>
-  <main class="container">
-    <div class="card">
-      <div class="img-news">
-        <img src="https://s2.glbimg.com/e7Q7OnotNJ_jtCXHry1PH9pz4JY=/0x0:1920x1080/810x456/smart/https://i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2022/5/5/QdrGU7SmK9d7BAfEnBMg/pgm-globonews-limpo-ao-vivo-20220224-1559-frame-274032.jpeg" alt="img news " width="350px" height="200px"/>
-      </div>
-      <div class="news">
-        <div>
-          <h2 class="title">MAPAS: invasão russa ocorre em 3 frentes simultâneas</h2>
-        </div>
-        <ul>
-          <li class="link"> <a href="#">Ucrânia tem engarrafamentos e corrida ao mercado; armas são distribuídas</a></li>
-          <li class="link" ><a href="#">Entenda o que é a lei Marcial e por que foi decretada</a></li>
-        </ul>
-        <div>
-          <p class="sub-title">Americano descartou entrar na Ucrânia, mas advertiu Rússia para não atacar aliados da Otan.</p>
-        </div>
-      </div>
-    </div>
-  </main> 
+  <main class="container"></main>
+  <script src="./script.js" type="module"></script> 
 </body>
 </html>
