--- a/views/styles.css
+++ b/views/styles.css
@@ -1,15 +1,22 @@
 .container {
   width: 100%;
   font-family: "Lato", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 .card {
   width: 60%;
+  align-self: center;
   display: flex;
   align-items: center;
   gap: 20px;
   margin-left: 50px;
   border-bottom: 1px solid #4844448c;
-  padding-bottom: 5px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+.img-news {
+  padding-top: 30px;
 }
 .news {
   width: 50%;
@@ -22,8 +29,12 @@
   color: #c4170c;
   font-weight: 800;
 }
+.title a {
+  color: #c4170c;
+  text-decoration: none;
+}
 .link {
-  margin-top: 15px;
+  margin-top: 5px;
   color: #4844448c;
   margin-left: 15px;
 }
